[gd_scene load_steps=11 format=2]

[ext_resource path="res://source/world/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/png/square.png" type="Texture" id=2]
[ext_resource path="res://assets/png/Glow.png" type="Texture" id=3]
[ext_resource path="res://assets/wav/wall_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/png/circle.png" type="Texture" id=5]
[ext_resource path="res://source/feel/ImpactParticles.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/feel/BulletTrail.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20, 10 )

[sub_resource type="AudioStreamRandomPitch" id=2]

audio_stream = ExtResource( 4 )
random_pitch = 1.25

[sub_resource type="Animation" id=3]

resource_name = "Impact"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HitSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.00392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Bullet" type="KinematicBody2D" groups=[
"Bullets",
]]
input_pickable = false
collision_layer = 2
collision_mask = 0
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Z Index" ]
speed = 3000.0
damage = 30.0
recoil = 500

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Glow" type="Sprite" parent="."]
modulate = Color( 0.95, 0.87, 0.05, 0.75 )
scale = Vector2( 0.75, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
scale = Vector2( 1.25, 1.25 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 5
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="HitGunnerSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 2 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 0.5
bus = "Master"
area_mask = 1
_sections_unfolded = [ "stream" ]

[node name="HitWallSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 2 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 0.5
bus = "Master"
area_mask = 1
_sections_unfolded = [ "stream" ]

[node name="HitSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.00392157 )
self_modulate = Color( 1, 1, 1, 0.75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Impact = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="ImpactParticles" parent="." instance=ExtResource( 6 )]

[node name="BulletTrail" parent="." instance=ExtResource( 7 )]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
